crates/solidity/testing/snapshots/bindings_output/using/global/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[ counter.sol:1:1 ]
   │
 1 │ ╭─▶ struct Counter {
   ┆ ┆   
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
[39mDefiniens:[0m 
[39mReferences and definitions:[0m 
   ╭─[ main.sol:1:1 ]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── name: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 2
 4 │     function test(Counter memory c) public {
   │              ──┬─                ┬  
   │                ╰──────────────────── name: 3
   │                                  │  
   │                                  ╰── name: 4
   │
   ├─[ main.sol:1:1 ]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── unresolved
   │ 
 4 │     function test(Counter memory c) public {
   │                   ───┬───  
   │                      ╰───── ref: 1
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 4
   │               │      
   │               ╰────── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ main.sol:1:1 ]
   │
 1 │ │   import {Counter} from "counter.sol";
   │ │           ───┬───  
   │ │              ╰───── definiens: 1
 2 │ ╭─▶ 
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 2
   │
   ├─[ main.sol:1:1 ]
   │
 4 │ ╭─▶     function test(Counter memory c) public {
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── definiens: 3
   │
   ├─[ main.sol:1:1 ]
   │
 4 │     function test(Counter memory c) public {
   │                   ────────┬───────  
   │                           ╰───────── definiens: 4
───╯
